<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_while">

    <TextView
        android:id="@+id/tv_web_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E75373"
        android:paddingLeft="8dp"
        android:paddingTop="20dp"
        android:text="@string/login_title"
        android:textColor="#fff"
        android:textSize="16sp" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="指尖校园"
            android:textColor="@color/colorApp"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="动动手指,啥都有了"
            android:textColor="@color/colorApp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_login_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:id="@+id/edt_login_username"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/edit_gray_selector"
            android:hint="@string/hint_username"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/hint_edt_text" />

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_gray_selector"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/text_black"
            android:textColorHint="@color/hint_edt_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="15dp"
                android:text="@string/text_rigister"
                android:textColor="@color/btn_login_pressed"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:text="@string/text_get_pwd_back"
                android:textColor="@color/btn_login_pressed"
                android:textSize="16sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_login_selector"
            android:padding="10dp"
            android:text="@string/btn_login"
            android:textColor="@color/theme_while"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/theme_bg2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/text_other_account"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/theme_bg2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_wechat_login"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/wechat_logo_selector" />

            <ImageView
                android:id="@+id/img_weibo_login"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/weibo_logo_selector" />

            <ImageView
                android:id="@+id/img_qq_login"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/qq_logo_selector" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
